syntax = "proto3";

package proto;

option go_package = ".;proto";

service user{
  rpc AddStudentToClass(AddStudentToClassRequest) returns (CommonResponse);
  rpc BatchAddStudentToClass(stream FileChunk) returns(StudentIds);
}

message AddStudentToClassRequest{
  string cid = 1;
  string  uid = 2;
  string  name = 3;
}

message CommonResponse{
  bool success = 1;
}

message StudentIds{
  repeated string uids = 1;
}

message FileChunk{
  bytes content = 1; // 文件内容
  string  filename = 2; // 文件名
  string  cid = 3; // 课程id
}

message Student{
  string sid = 1;
  string name = 2;
  string college = 3;
  string major = 4;
  string avatar = 5;
  bool deleted = 6;
}